--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -7,6 +7,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
     <ImageView
+            android:id="@+id/img_team_logo"
             android:src="@mipmap/ic_launcher"
             android:layout_width="50dp"
             android:layout_height="50dp"
